--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -17,3 +17,39 @@ html,body {
 }
 
 /* min-height is not inherited by the child  so we have replace the min-height by the height property */
+
+.ripple_btn{
+	border:none;
+	outline: none;
+	margin: 10px;
+	padding: 14px 24px;
+	border-radius: 15px;
+	background-color: blue;
+	color: white;
+	cursor: pointer;
+	overflow: hidden;
+	width: 400px;
+	position: relative;
+	z-index: 100;
+}
+
+.ripple{
+	position:absolute;
+	left:0;
+	top:0;
+	z-index: 3;
+	background-color:#768b8c;
+	border-radius: 50%;
+	transform: translate(-50%,-50%) scale(1) ;
+	pointer-events: none;
+	opacity: 0.5 ;
+	animation: ripple-effect 1s ease-out forwards;
+}
+
+@keyframes ripple-effect{
+	
+	to {
+		transform: translate(-50%,-50%) scale(100);
+		opacity: 0;
+	  }
+}
