--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,38 +18,34 @@ html,body {
 
 /* min-height is not inherited by the child  so we have replace the min-height by the height property */
 
-.ripple_btn{
-	border:none;
-	outline: none;
-	margin: 10px;
-	padding: 14px 24px;
-	border-radius: 15px;
-	background-color: blue;
-	color: white;
-	cursor: pointer;
-	overflow: hidden;
-	width: 400px;
+.custom_btn{
 	position: relative;
-	z-index: 100;
+	overflow: hidden;
+	transition: background 400ms;
+	color: #fff;
+	background-color: #6200ee;
+	padding: 1rem 2rem;
+	font-family: 'Roboto', sans-serif;
+	font-size: 1.5rem;
+	outline: 0;
+	border: 0;
+	border-radius: 0.25rem;
+	box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.3); /* black with 30% opacity */
+	cursor: pointer;
 }
 
-.ripple{
-	position:absolute;
-	left:0;
-	top:0;
-	z-index: 3;
-	background-color:#768b8c;
+span.custom_ripple{
+	position: absolute;
 	border-radius: 50%;
-	transform: translate(-50%,-50%) scale(1) ;
-	pointer-events: none;
-	opacity: 0.5 ;
-	animation: ripple-effect 1s ease-out forwards;
+	
+	transform: translate(-50%,-50%) scale(0) ;
+	animation: ripple_animation 1000ms linear;
+	background-color: rgba(255, 255, 255, 0.7);
 }
 
-@keyframes ripple-effect{
-	
+@keyframes ripple_animation{
 	to {
-		transform: translate(-50%,-50%) scale(100);
+		transform: translate(-50%,-50%) scale(4);
 		opacity: 0;
 	  }
 }
