--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -9,7 +9,7 @@
 	/* always set this like this html and body element */
 	html,
 	body {
-		background-color: #f2f7f9;
+		background-color: #ffffff;
 		font-family: "Poppins", sans-serif;
 		min-height: 100vh;
 		width: 100%;
