--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -38,17 +38,17 @@
         position: relative;
         overflow: hidden;
         transition: background 400ms;
-        color: #fff;
-        background-color: #6200ee;
-        padding: 1rem 2rem;
-        font-family: 'Roboto', sans-serif;
-        font-size: 1.5rem;
+
         outline: 0;
         border: 0;
 
         border-radius: 0.25rem;
-        box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.3); /* black with 30% opacity */
+
         cursor: pointer;
+    }
+
+    .custom_btn:hover {
+        box-shadow: 0rem 0rem 0.5rem rgba(0, 0, 0, 0.7);
     }
 
     span.custom_ripple {
